...
}

class NoInternetException implements HighStyleApparelException {
  NoInternetException();

  @override
  String cause = 'Please check internet connection';
}

class ClientErrorException implements HighStyleApparelException {
  ClientErrorException(this.cause);

  @override
...

  InvalidPasswordException();
}

class SomethingWentWrongException implements HighStyleApparelException {
  @override
  String cause = 'Oops! Something went wrong.';

  SomethingWentWrongException();
}

class InvalidFirstNameException implements HighStyleApparelException {
  @override
...
