...
  "title_new_password_hint": "New Password",
  "title_confirm_password_hint": "Confirm Password",
  "title_confirm": "Confirm",

  "@_Dialogs": {},
  "title_loading": "Loading",
  "title_alert": "Alert!",
  "title_okay": "Okay"
}
